# flight_logs_analyzer

./: .gitignore  analysis_crash.py  analysis_long_route.py  analysis_longest_flight.py  pyproject.toml
