[project]
name = "flight-logs-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "plotly[express]>=6.0.1",
    "polars>=1.29.0",
]

[dependency-groups]
dev = [
    "marimo[recommended]>=0.13.8",
    "python-lsp-server>=1.12.0",
]
